Add Demo Day presentation assignment

--- a/assignments.html
+++ b/assignments.html
@@ -119,6 +119,12 @@
 			<li><a href="assignments/031115.html">Wednesday, March 11</a></li>
 		</ul>
 	</div>
+	<div class="contact">
+		<h2>Week 12</h2>
+		<ul>
+			<li><a href="assignments/032315.html">Monday, March 23</a></li>
+		</ul>
+	</div>
 
 </main> <!-- /.mainContent -->
 
