--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
 			</li>
 			<li><span>Hipchat:</span> @JohnDavidHunt</li>
 			<li><span>Skype:</span> isleepinpajamas</li>
-			<li><span>Twitter: </span><a href="http://www.twitter.com/genecrawford">@johndavidhunt</a></li>
+			<li><span>Twitter: </span><a href="http://www.twitter.com/johndavidhunt">@johndavidhunt</a></li>
 		</ul>
 	</div>
 	
